[package]
name = "ebs"
version = "0.1.0"
edition = "2021"
include = ["src/main.rs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["clock"] }
csv = "1.2"
indicatif = "0.17"
jiff = { version = "0.1", features = ["serde"] }
rand = "0.8"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0"
